--- a/howler/settings/locale/ja/LC_MESSAGES/djangojs.po
+++ b/howler/settings/locale/ja/LC_MESSAGES/djangojs.po
@@ -18,22 +18,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: templates/base.html:15
-msgid "Howler email search"
-msgstr "Howler メール検索"
-
-#: templates/base.html:41
-msgid "Toggle navigation"
-msgstr ""
-
-#: templates/base.html:59
-msgid "Settings"
-msgstr "設定"
-
-#: templates/base.html:60
-msgid "Admin"
-msgstr "アドミン"
-
-#: templates/base.html:102
-msgid "Email search"
-msgstr "Howler メール検索"
+#: settings/static/settings/settings.js:22
+msgid "Successfully updated elasticsearch index"
+msgstr "Elasticsearchインデックスを首尾よくしました"
