--- a/howler/settings/locale/ja/LC_MESSAGES/django.po
+++ b/howler/settings/locale/ja/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-13 10:58+0900\n"
+"POT-Creation-Date: 2016-12-13 11:40+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,6 +29,10 @@ msgstr "同意語単語B (略語)"
 #: settings/models.py:10
 msgid "Synonym Term B Katakana"
 msgstr "同意語単語Bカタカナ"
+
+#: settings/models.py:12
+msgid "If provided, term will be added to userdict (Required if shortcut)"
+msgstr "書いてある場合は単語がuserdictに付けられる(略語なら必要)"
 
 #: settings/templates/settings/base_settings.html:11
 msgid "External maintenance links"
