--- a/howler/settings/locale/ja/LC_MESSAGES/django.po
+++ b/howler/settings/locale/ja/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-19 12:15+0900\n"
+"POT-Creation-Date: 2017-01-04 15:22+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,7 +50,11 @@ msgstr "Elasticsearchインデックス"
 msgid "Elasticsearch Kibana"
 msgstr "Elasticsearch Kibana"
 
-#: settings/templates/settings/base_settings.html:26
+#: settings/templates/settings/base_settings.html:23
+msgid "Kibana Main Dashboard (Last 2 years)"
+msgstr "Kibana Main Dashboard (過去2年間)"
+
+#: settings/templates/settings/base_settings.html:29
 msgid "Settings"
 msgstr "設定"
 
