--- a/howler/locale/ja/LC_MESSAGES/django.po
+++ b/howler/locale/ja/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-06 16:57+0900\n"
+"POT-Creation-Date: 2017-01-10 11:35+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -41,3 +41,7 @@ msgstr "アドミン"
 #: templates/base.html:106
 msgid "Email search"
 msgstr "Howler メール検索"
+
+#: templates/common/dt_childtoggler.html:9
+msgid "toggle hits shown"
+msgstr "表示されたヒットを切り替える"
