--- a/howler/locale/ja/LC_MESSAGES/django.po
+++ b/howler/locale/ja/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-24 15:48+0900\n"
+"POT-Creation-Date: 2017-01-27 10:57+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -51,5 +51,5 @@ msgid "selected value remembered"
 msgstr "選んだ値が記憶された"
 
 #: templates/common/dt_childtoggler.html:11
-msgid "toggle hits shown"
-msgstr "表示されたヒットを切り替える"
+msgid "show hit details"
+msgstr "ヒットした内容を表示する」かな"
